@@ -1,3 +1,13 @@
+2015-08-18  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl_global_ctxt.h (naslctxt): Add kb element.
+
+	* nasl/exec.c (exec_nasl_script): Set context kb.
+
+	* nasl/nasl_grammar.y (INCLUDE): Set context kb.
+	(init_nasl_ctx): Cache the signature checking result in kb, to prevent
+	checking the same nasl script or include file multiple times.
+
 2015-08-14  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl_ssh.c (nasl_ssh_connect): Check for LibSSH version when
